--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,22 +60,20 @@ jobs:
     # - name: Build with Gradle 8.5
     #   run: gradle build
   test-run:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     needs: build
-    
     steps:
     - name: Download candidate artifacts
-      uses: actions/download-artifact@v4 
+      uses: actions/download-artifact@v4  
       with:
         name: greetings-jar
-        
     - name: Set up JDK 17
-      uses: actions/setup-java@v4 
+      uses: actions/setup-java@v4
       with:
-        java-version: '17' distribution: 'temurin'
-        
-     - name: Execute test
-       shell: bash
-       run: |
-          chmod +x ./test-script.sh
-          ./test-script.sh ${{ github.event.inputs.myVersion || needs.build.outputs.artifact-tag }} ${{ github.event.inputs.myValues }}
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Execute test
+      shell: bash
+      run: | 
+        chmod +x ./test-script.sh
+        ./test-script.sh ${{ github.event.inputs.myVersion || needs.build.outputs.artifact-tag }} ${{ github.event.inputs.myValues }}
